@@ -4,6 +4,8 @@ XX/XX/2018
  • Removed iconset: modern_simplified
  • Removed firestate button from anti's
  • Fixed pyro pilotlight showing up out of los
+ • Added modoption: "globallos", enables full visibility
+ • Added modoption: "hpmult", unit health multiplier
 
 
 10.17 -> 10.18
